<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.frameworkium</groupId>
  <artifactId>frameworkium-examples</artifactId>
  <!--
  This version tag is for this specific project.
  To change the version of frameworkium-core, see dependencies section below.
  -->
  <version>3</version>

  <name>Frameworkium Examples</name>
  <description>
    A template designed to get up and running quickly with Selenium and Appium.
  </description>
  <url/>
  <inceptionYear/>
  <organization/>
  <licenses/>

  <developers/>
  <contributors/>

  <modules/>

  <scm/>
  <issueManagement/>
  <ciManagement/>
  <distributionManagement/>

  <properties>
    <!-- Default thread count and groups to run -->
    <threads>1</threads>
    <groups/>

    <!-- Versions from frameworkium-core -->
    <aspectj.version>1.9.4</aspectj.version>
    <allure.version>2.12.1</allure.version>

    <!-- Prevent encoding issues -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <!-- Makes mvn versions:display-plugin-updates faster -->
  <prerequisites>
    <maven>3.3.9</maven>
  </prerequisites>

  <dependencies>
    <dependency>
      <groupId>com.github.frameworkium</groupId>
      <artifactId>frameworkium-core</artifactId>
      <version>3.0.0</version>
    </dependency>

    <!-- Your own dependencies here -->

    <!-- Used in CreateScreenshot -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.6</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <!-- Compile all the lovely Java code -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>

      <!-- Run all of your lovely tests -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M3</version>
        <configuration>
          <!-- See here for how TestNG uses these:
          http://testng.org/doc/documentation-main.html#parallel-tests -->
          <parallel>methods</parallel>
          <threadCount>${threads}</threadCount>

          <systemPropertyVariables>
            <!-- For Frameworkium screenshots on test failure -->
            <screenshotDirectory>
              ${project.build.directory}/screenshots
            </screenshotDirectory>
            <!-- Required for writing the allure results -->
            <allure.results.directory>
              ${project.build.directory}/allure-results
            </allure.results.directory>
          </systemPropertyVariables>

          <!-- This will only run Classes ending in Test or Tests-->
          <includes>
            <include>**/*Test.java</include>
            <include>**/*Tests.java</include>
          </includes>

          <!-- TestNG Groups to run, can be specified on the command line -->
          <groups>${groups}</groups>

          <!-- Required for AspectJ to work to enable Allure reporting -->
          <argLine>
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>

      <!-- Allure 2 reporting. Use mvn allure:report to generate the report -->
      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>2.10.0</version>
        <configuration>
          <!-- Keep version in sync with dependencies -->
          <reportVersion>${allure.version}</reportVersion>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
